--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href = "style.css">
 </head>
 <body>
+    <section class="chamada">
+        <div class="chamada-texto"
+        <header>como não ligar para opinião dos outros e viver sua melhor vida </header>
+        <h1>como não ligar para opinião dos outros e viver sua melhor vida </h1>
+       <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ze_dx11sTSk?si=7QZQ7yxwJrHOs9vE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+    </section>
+    
     
 </body>
 </html>
